Added devise auth, connected with rswag
