# app/controllers/api/v1/comments_controller.rb
@@ -1,0 +1,13 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    # :nodoc:
+    class CommentsController < ApplicationController
+      def index
+        @comments = Comment.all
+        render json: @comments, message: 'Comment list', status: :ok
+      end
+    end
+  end
+end
