# swagger/v1/swagger.yaml
@@ -3,7 +3,30 @@ openapi: 3.0.1
 info:
   title: API V1
   version: v1
+basePath: "/api/v1/"
+servers:
+- url: http://localhost:3000
+  variables:
+    defaultHost:
+      default: localhost:3000
+components:
+  securitySchemes:
+    ApiKeyAuth:
+      type: apiKey
+      name: Authorization
+      in: header
+      description: "{token}"
 paths:
+  "/api/v1/comments":
+    get:
+      summary: List comments
+      tags:
+      - Comments
+      security:
+      - ApiKeyAuth: []
+      responses:
+        '200':
+          description: successful
   "/api/v1/products":
     get:
       summary: List products
@@ -111,8 +134,25 @@ paths:
       responses:
         '200':
           description: successful
-servers:
-- url: http://localhost:3000
-  variables:
-    defaultHost:
-      default: localhost:3000
+  "/api/v1/users/sign_in":
+    post:
+      summary: Login of the user
+      tags:
+      - Authorization
+      parameters: []
+      responses:
+        '201':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+              - email
+              - password
